// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base/System/GlobalSetting/CBOperationLogsExpiredHours render snap when field show 1`] = `
<body>
  <div>
    <div
      class="ant-row ant-row-space-between ant-row-middle css-19fu9ar css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-col ant-col-11 config-item-label css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="config-item-label"
        >
          <div
            class="title"
          >
            CB工作台操作审计过期时间(小时)
          </div>
        </div>
      </div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center config-item-filed"
      >
        <div
          class="ant-space-item"
        >
          <div
            class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-spin-container"
            >
              <div
                class="ant-input-number-group-wrapper basic-inputNumber-wrapper css-1fd5hnt ant-input-number-group-wrapper-lg css-dev-only-do-not-override-ezmdel"
              >
                <div
                  class="ant-input-number-wrapper ant-input-number-group css-dev-only-do-not-override-ezmdel"
                >
                  <div
                    class="ant-input-number ant-input-number-lg css-dev-only-do-not-override-ezmdel ant-input-number-focused"
                  >
                    <div
                      class="ant-input-number-handler-wrap"
                    >
                      <span
                        aria-disabled="false"
                        aria-label="Increase Value"
                        class="ant-input-number-handler ant-input-number-handler-up"
                        role="button"
                        unselectable="on"
                      >
                        <span
                          aria-label="up"
                          class="anticon anticon-up ant-input-number-handler-up-inner"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="up"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                      <span
                        aria-disabled="false"
                        aria-label="Decrease Value"
                        class="ant-input-number-handler ant-input-number-handler-down"
                        role="button"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-input-number-handler-down-inner"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                    <div
                      class="ant-input-number-input-wrap"
                    >
                      <input
                        aria-valuenow="2160"
                        autocomplete="off"
                        class="ant-input-number-input"
                        id="editInputNumber"
                        role="spinbutton"
                        step="1"
                        value="2160"
                      />
                    </div>
                  </div>
                  <div
                    class="ant-input-number-group-addon"
                  >
                    <span
                      class="custom-icon custom-icon-selected css-u3jcp4"
                      role="img"
                    >
                      <svg
                        fill="none"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          id="selected"
                        >
                          <path
                            d="M3.33334 8.00002L6.66668 11.3334L13.3333 4.66669"
                            id="Vector"
                            stroke="#4583FF"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          />
                        </g>
                      </svg>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/System/GlobalSetting/CBOperationLogsExpiredHours render snap when has expiredHours 1`] = `
<body>
  <div>
    <div
      class="ant-row ant-row-space-between ant-row-middle css-19fu9ar css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-col ant-col-11 config-item-label css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="config-item-label"
        >
          <div
            class="title"
          >
            CB工作台操作审计过期时间(小时)
          </div>
        </div>
      </div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center config-item-filed"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px;"
        >
          2020
        </div>
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-icon-only config-item-filed-edit-button basic-button-wrapper css-geipcv"
            hidden=""
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svg
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                  fill="#8A8F99"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/System/GlobalSetting/CBOperationLogsExpiredHours render snap when no expiredHours 1`] = `
<body>
  <div>
    <div
      class="ant-row ant-row-space-between ant-row-middle css-19fu9ar css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-col ant-col-11 config-item-label css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="config-item-label"
        >
          <div
            class="title"
          >
            CB工作台操作审计过期时间(小时)
          </div>
        </div>
      </div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center config-item-filed"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px;"
        >
          -
        </div>
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-icon-only config-item-filed-edit-button basic-button-wrapper css-geipcv"
            hidden=""
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svg
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                  fill="#8A8F99"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;
